--- a/app/views/forecast.html
+++ b/app/views/forecast.html
@@ -15,6 +15,8 @@
                 <h3 class="display-inline">Digital Life</h3>
             </div>
            </a>
+                           <a href="images/unit.jpg">Screen Test</a> 
+
         </div>
     </div>
 </div>
