--- a/app-store/views/pay-options-modal.html
+++ b/app-store/views/pay-options-modal.html
@@ -1,2 +1,10 @@
-﻿<button ng-click="mobileShare()">Mobile share</button>
-<button ng-click="creditCard()">Credit card</button>
+﻿<div class="modal-header">
+    <h3 class="modal-title">Select your payment option</h3>
+</div>
+<div class="modal-body">
+    <p>Please choose whether you want this payment to be billed to your Mobile Share account or to your credit card.</p>
+</div>
+<div class="modal-footer">
+	<button class="btn btn-default" ng-click="mobileShare()">Mobile share</button>
+	<button class="btn btn-default" ng-click="creditCard()">Credit card</button>
+</div>
