--- a/mobile-share/views/mobile-share.html
+++ b/mobile-share/views/mobile-share.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <p class="lead"><span class="text-muted">Step 1:</span>&nbsp;Input your account information</p>
+                    <p class="lead"><span class="text-muted">Step 1:</span>&nbsp;Please provide your Mobile Share account info</p>
                 </div>
             </div>
             <div class="row">
@@ -37,7 +37,26 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <p class="lead"><span class="text-muted">Step 2:</span>&nbsp;Select a data plan</p>
+                <p class="lead"><span class="text-muted">Step 2:</span>&nbsp;Select a Mobile Share group</p>
+            </div>
+        </div>
+        <div class="row" ng-repeat="group in mobileShareGroups" style="margin-bottom: 10px;">
+            <div class="col-xs-12">
+                <input type="radio" id="r{{$index}}" ng-model="selectedGroup" ng-click="selectGroup(group.id)" value="{{group.id}}" name="radio" />
+                <label for="r{{$index}}"><span></span>{{group.name}}</label>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <a ng-click="step=1" class="btn btn-default" style="width: 49%">Back</a>
+        <a ng-disabled="!selectedGroup" ng-click="plans()" class="btn btn-primary" style="width: 49%">Continue</a>
+    </div>
+</div>
+<div ng-show="step==3">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <p class="lead"><span class="text-muted">Step 3:</span>&nbsp;Select a data plan</p>
             </div>
         </div>
     </div>
@@ -53,7 +72,7 @@
                              <span class="price-main">${{package.price}}/mo</span><br>
                              <span>+ $10/mo for this car</span>
                         </p>
-                        <a ng-click="selectPlan(package)" class="btn btn-primary" ng-show="package.id != currentPackageId">Select</a>
+                        <a ng-click="selectPlan(package)" class="btn btn-primary" ng-disabled="package.id == currentPackageId">Select</a>
                     </div>
                 </div>
             </att-slide>  
@@ -64,29 +83,10 @@
             <div class="col-xs-12">
                     <small class="text-muted">
                         <strong>You should know:</strong> Using Wi-Fi in the car with your current 10GB data plan may put you over the limit.
-                    </small class="text-muted">
+                    </small>
             </div>
         </div>
     </div>
-</div>
-<div ng-show="step==3">
-    <div class="container">
-	    <div class="row">
-		    <div class="col-xs-12">
-			    <p class="lead"><span class="text-muted">Step 3:</span>&nbsp;Select a Mobile Share group for this vehicle</p>
-		    </div>
-	    </div>
-        <div class="row" ng-repeat="group in mobileShareGroups">
-		    <div class="col-xs-12">
-			    <input type="radio" id="r{{$index}}" ng-model="selectedGroup" ng-click="selectGroup(group.id)" value="{{group.id}}" name="radio"/>
-    		    <label for="r{{$index}}"><span></span>{{group.name}}</label>
-		    </div>
-	    </div>
-    </div>
-	<div class="footer">
-			<a ng-click="step=2" class="btn btn-default" style="width: 49%">Back</a>
-			<a  ng-disabled="!selectedGroup" ng-click="step=4" class="btn btn-primary" style="width: 49%">Continue</a>
-	</div>
 </div>
 <div ng-show="step==4">
     <div class="container">
@@ -126,7 +126,7 @@
     <div class="container">
 	    <div class="row">
 		    <div class="col-xs-12">
-			    <h3><span class="text-muted">Final step:</span>&nbsp;Purchase summary</h3>
+			    <h3><span class="text-muted">Final step:</span>&nbsp;Purchase summary <span ng-show="acceptSpecialOffer">- <a href="" ng-click="step=4">Special offer</a> selected</span></h3>
 		    </div>
 	    </div>
 	    <div class="summary-table">
